# openclaw-coding-agent

./: Cargo.toml  README.md
crates/executor-cli/: Cargo.toml
crates/executor-cli/src/: dispatch.rs  main.rs
crates/executor-cli/src/commands/: cleanup.rs  cleanup_stale.rs  config.rs  dashboard.rs  executors.rs  kill.rs  list.rs  logs.rs  mod.rs  run.rs  start.rs  status.rs
crates/executor-container/: Cargo.toml
crates/executor-container/src/: container_executor.rs  lib.rs
crates/executor-core/: Cargo.toml
crates/executor-core/src/: completion.rs  config.rs  error.rs  executor.rs  lib.rs  metadata.rs  task.rs
crates/executor-core/tests/: heartbeat_tests.rs
crates/executor-local/: Cargo.toml
crates/executor-local/src/: lib.rs  local_executor.rs
crates/executor-ssh/: Cargo.toml
crates/executor-ssh/src/: lib.rs  ssh_executor.rs
