[package]
name = "openclaw-agent"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "CLI for the OpenClaw coding agent executor framework"

[[bin]]
name = "openclaw-agent"
path = "src/main.rs"

[dependencies]
executor-core.workspace = true
executor-ssh.workspace = true
executor-container.workspace = true
executor-local.workspace = true
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
clap.workspace = true
chrono.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
