[package]
name = "executor-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Core traits and types for the OpenClaw coding agent executor framework"

[dependencies]
anyhow.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
tokio.workspace = true
chrono.workspace = true
uuid.workspace = true
dirs.workspace = true
async-trait.workspace = true
